...
    }

    @Composable
    override fun UI(state: GetUserNameState) = GetUserNameUI(state)

    object GetUserNameTestTag {
        const val TEXT_INPUT = "TEXT_INPUT"
    }
}

