...
        ),
        shape = CircleShape,
        icon = IconProps(
            icon = Drawables.Icons.Arrow,
            tint = Colors.White,
            modifier = Modifier.size(24.dp),
            contentDescription = "Continue"
        ),
        onClick = onClick
    )
}

@Composable
...
